# frankensqlite

./: .gitignore  AGENTS.md  ANALYSIS_OF_SPEC_DOC_DIFFS.md  COMPREHENSIVE_SPEC_FOR_FRANKENSQLITE_V1.md  COMPREHENSIVE_SPEC_FOR_FRANKENSQLITE_V1_CODEX.md  Cargo.toml  MVCC_SPECIFICATION.md  PLAN_TO_PORT_SQLITE_TO_RUST.md  README.md  _headers  _routes.json  deploy.sh  visualization_of_the_evolution_of_the_frankensqlite_specs_document_from_inception.html
.beads/: issues.jsonl
crates/fsqlite/: Cargo.toml
crates/fsqlite-core/: Cargo.toml
crates/fsqlite-core/src/: commit_marker.rs  commit_repair.rs  compat_persist.rs  connection.rs  db_fec.rs  decode_proofs.rs  ecs_replication.rs  epoch.rs  lib.rs  lrc.rs  policy_controller.rs  raptorq_integration.rs  repair_engine.rs  repair_symbols.rs  replication_receiver.rs  replication_sender.rs  snapshot_shipping.rs  wal_adapter.rs
crates/fsqlite-e2e/: Cargo.toml  HARNESS.md  RUNBOOK.md
crates/fsqlite-e2e/src/: batch_runner.rs  ci_smoke.rs  comparison.rs  corruption.rs  fixture_select.rs  fsqlite_recovery_demo.rs  lib.rs  oplog.rs  perf_runner.rs  report_render.rs  sqlite_executor.rs  workload.rs
crates/fsqlite-e2e/tests/: bd_3plop_5_ssi_serialization_correctness.rs  e2e_storage_stack.rs
crates/fsqlite-ext-fts3/: Cargo.toml
crates/fsqlite-ext-icu/: Cargo.toml
crates/fsqlite-ext-icu/src/: lib.rs
crates/fsqlite-ext-json/: Cargo.toml
crates/fsqlite-ext-json/src/: lib.rs
crates/fsqlite-ext-misc/: Cargo.toml
crates/fsqlite-ext-misc/src/: lib.rs
crates/fsqlite-func/: Cargo.toml
crates/fsqlite-func/src/: agg_builtins.rs  aggregate.rs  builtins.rs  collation.rs  datetime.rs  lib.rs  scalar.rs  vtab.rs  window.rs
crates/fsqlite-harness/: Cargo.toml
crates/fsqlite-harness/conformance/: core_sql_golden_blake3.json
crates/fsqlite-harness/src/: backlog_quality_gate.rs  bloodstream.rs  closure_wave.rs  commit_pipeline.rs  corpus_ingest.rs  cross_process_crash_harness.rs  durability_matrix.rs  e2e_log_schema.rs  e2e_orchestrator.rs  e2e_traceability.rs  eprocess.rs  fault_profiles.rs  fault_vfs.rs  fixture_discovery.rs  forensics_navigator.rs  fslab.rs  lane_selector.rs  lib.rs  log.rs  log_schema_validator.rs  mismatch_minimizer.rs  no_mock_critical_path_gate.rs  oracle.rs  perf_loop.rs  performance_regression_detector.rs  planner_vdbe_closure.rs  realdb_e2e_logging.rs  replay_harness.rs  replay_triage.rs  scheduler.rs  semantic_gap_map.rs  soak_executor.rs  spec_to_beads_audit.rs  sql_pipeline_suites.rs  storage_unit_suites.rs  supervision.rs  t6sv2_checklist.rs  tcl_conformance.rs  test_diagnostics.rs  tla.rs  (+4 more)
crates/fsqlite-harness/tests/: bd_121m_persistence_roundtrip.rs  bd_148q_resilience_combinators_compliance.rs  bd_19hv_alien_pillars_summary_compliance.rs  bd_1hi_7_failure_monitoring.rs  bd_1lsfu_2_core_sql_golden_checksums.rs  bd_1uzb_file_format_compatibility_compliance.rs  bd_1xds_deterministic_concurrency.rs  bd_2832_sql_pattern_coverage.rs  bd_2d6i_select_compliance.rs  bd_2g5_2_rcu_correctness.rs  bd_2g5_3_seqlock_correctness.rs  bd_2g5_4_leftright_correctness.rs  bd_2npr_mvcc_concurrent_writer_stress.rs  bd_2zoa_arc_performance_warmup_compliance.rs  bd_316x_fts5_extension_compliance.rs  bd_3a7d_crash_recovery_wal_integrity.rs  bd_3d5b_conformance_testing_compliance.rs  bd_3kin_ddl_compliance.rs  bd_3kp_1_decision_register_compliance.rs  bd_3kp_3_future_work_compliance.rs  bd_3plop_1_skewed_key_fault_injection.rs  bd_3plop_2_resize_storms.rs  bd_3plop_3_crash_compaction_fault_injection.rs  bd_3plop_7_tcl_conformance.rs  bd_688_3_latchfree_version_chain.rs  bd_7pxb_transaction_control_compliance.rs  bd_i0m5_networking_stack_compliance.rs  bd_mblr_7_2_endurance.rs  bd_mblr_7_3_1_benchmark_corpus.rs  bd_mblr_7_3_perf_governance.rs  bd_mblr_7_4_durability_matrix.rs  bd_mblr_7_5_2_forensics_cli.rs  bd_mblr_7_5_3_navigator_correctness_operator_workflows.rs  bd_mblr_7_6_1_bisect_replay_manifest.rs  bd_mblr_7_8_3_determinism_drift_triage_automation.rs  bd_mblr_7_9_2_lane_selector.rs  commit_pipeline.rs  commit_repair_async.rs  corpus_ingest_test.rs  cx_sealed_enforcement.rs  (+11 more)
crates/fsqlite-harness/tests/ui/: sealed_btree_cursor_impl_fail.stderr  sealed_checkpoint_writer_impl_fail.stderr  sealed_mvcc_pager_impl_fail.stderr
crates/fsqlite-mvcc/: Cargo.toml
crates/fsqlite-mvcc/benches/: mvcc_bench.rs
crates/fsqlite-mvcc/src/: begin_concurrent.rs  bocpd.rs  cache_aligned.rs  compat.rs  conflict_model.rs  conformal_martingale.rs  coordinator_ipc.rs  core_types.rs  differential_privacy.rs  ebr.rs  flat_combining.rs  gc.rs  hot_witness_index.rs  invariants.rs  left_right.rs  lib.rs  lifecycle.rs  observability.rs  physical_merge.rs  provenance.rs  rcu.rs  retry_policy.rs  rowid_alloc.rs  shared_lock_table.rs  shm.rs  sketch_telemetry.rs  ssi_abort_policy.rs  ssi_anomaly_tests.rs  ssi_validation.rs  time_travel.rs  two_phase_commit.rs  witness_hierarchy.rs  witness_objects.rs  witness_publication.rs  witness_refinement.rs  xor_delta.rs
crates/fsqlite-pager/: Cargo.toml
crates/fsqlite-pager/src/: arc_cache.rs  lib.rs  page_buf.rs  page_cache.rs  pager.rs  s3_fifo.rs  traits.rs
crates/fsqlite-parser/: Cargo.toml
crates/fsqlite-parser/src/: expr.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  token.rs
crates/fsqlite-planner/: Cargo.toml
crates/fsqlite-planner/src/: codegen.rs  lib.rs  stats.rs
crates/fsqlite-types/: Cargo.toml
crates/fsqlite-types/src/: cx.rs  ecs.rs  glossary.rs  lib.rs  obligation.rs  opcode.rs  record.rs  serial_type.rs  value.rs
crates/fsqlite-vdbe/: Cargo.toml
crates/fsqlite-vdbe/src/: codegen.rs  engine.rs  lib.rs  repro_delete_skip.rs  vectorized_agg.rs  vectorized_dispatch.rs  vectorized_join.rs  vectorized_ops.rs
crates/fsqlite-vfs/: Cargo.toml
crates/fsqlite-vfs/src/: lib.rs  memory.rs  shm.rs  traits.rs  unix.rs  uring.rs  windows.rs
crates/fsqlite-wal/: Cargo.toml
crates/fsqlite-wal/src/: checksum.rs  group_commit.rs  lib.rs  metrics.rs  native_commit.rs  recovery_compaction.rs  wal.rs  wal_fec.rs  wal_index.rs
crates/fsqlite/src/: lib.rs
docs/: BUSINESS_OVERVIEW_UA.md  (+5 more)
(+132 files in other folders)
