[package]
name = "fsqlite-e2e"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "End-to-end differential testing and benchmark harness for FrankenSQLite"

[lints]
workspace = true

[dependencies]
fsqlite = { workspace = true }
fsqlite-core = { workspace = true }
fsqlite-harness = { workspace = true }
fsqlite-vfs = { workspace = true }
fsqlite-types = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "realdb-e2e"
path = "src/bin/realdb_e2e.rs"

[[bench]]
name = "e2e_bench"
harness = false
