[package]
name = "fsqlite-ext-fts3"
version = "0.1.0"
description = "FTS3/FTS4 full-text search extension"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }

[lints]
workspace = true
