[package]
name = "fsqlite-ext-icu"
version = "0.1.0"
description = "ICU collation extension"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }

[lints]
workspace = true
