[package]
name = "fsqlite-ext-json"
version = "0.1.0"
description = "JSON1 functions and virtual tables"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
