[package]
name = "fsqlite-func"
version = "0.1.0"
description = "Built-in scalar, aggregate, and window functions"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
