[package]
name = "fsqlite-harness"
version = "0.1.0"
description = "Conformance test runner and golden file comparison"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { path = "/dp/asupersync" }
fsqlite = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-vfs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
trybuild = "1.0"
fsqlite-btree = { workspace = true }
fsqlite-core = { workspace = true }
fsqlite-func = { workspace = true }
fsqlite-mvcc = { workspace = true }
fsqlite-pager = { workspace = true }
fsqlite-types = { workspace = true }

[lints]
workspace = true
