[package]
name = "fsqlite-mvcc"
version = "0.1.0"
description = "MVCC page-level versioning for concurrent writers"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-pager = { workspace = true }
fsqlite-wal = { workspace = true }
nix = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
