[package]
name = "fsqlite-pager"
version = "0.1.0"
description = "Page cache and journal management"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
# fsqlite-vfs: commented out while unix.rs WIP has compile errors (re-enable for bd-22n.2)
# fsqlite-vfs = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
