[package]
name = "fsqlite-planner"
version = "0.1.0"
description = "Query planner: name resolution, WHERE analysis, join ordering"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-ast = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
