[package]
name = "fsqlite-vfs"
version = "0.1.0"
description = "Virtual filesystem abstraction layer"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
