[package]
name = "fsqlite-vfs"
version = "0.1.0"
description = "Virtual filesystem abstraction layer"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
pollster = "0.4.0"
uring-fs = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
advisory-lock = "0.3.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
