[package]
name = "fsqlite"
version = "0.1.0"
description = "Public API facade"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-core = { workspace = true }
fsqlite-vfs = { workspace = true }

[lints]
workspace = true
